--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -13,10 +13,11 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        
         <activity
             android:name="app.synchronous.ContactCard"
-            android:label="@string/app_name" >
-            <intent-filter>
+            android:label="@string/title_activity_contact_card" >
+            <intent-filter android:label="@string/app_name">
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
