--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,8 +15,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".NewUserActivity"
-                  android:label="@string/app_name" />
+        <activity android:name=".NewUserActivity" />
+        <activity android:name=".SplashActivity" />
     </application>
 
 </manifest>
