--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
         </activity>
         <activity android:name=".NewUserActivity" />
         <activity android:name=".SplashActivity" />
+        <activity android:name=".CardActivity" />
     </application>
 
 </manifest>
