find cards layout

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,8 +16,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".NewUserActivity" />
-        <activity android:name=".SplashActivity" />
         <activity android:name=".CardActivity" />
+        <activity android:name=".FindCardsActivity" />
     </application>
 
 </manifest>
