--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,6 @@ android {
 dependencies {
     compile 'de.hdodenhof:circleimageview:1.2.0'
     compile 'com.parse.bolts:bolts-android:1.1.2'
-    compile 'com.android.support:support-v4:20.0+'
+    compile 'com.android.support:support-v4:20.0.0'
     compile fileTree(dir: 'libs', include: ['*.jar'])
 }
