--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/CustomActionBarTheme" >
+
         <activity
             android:name=".LoginActivity"
             android:label="@string/app_name" >
@@ -19,6 +20,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity android:name=".NewUserActivity"
                   android:label="@string/quick_setup"
                   android:windowSoftInputMode="adjustPan"
@@ -27,13 +29,16 @@
         <activity android:name=".MyCardActivity"
                   android:label="@string/my_card"/>
 
+        <activity android:name=".SavedCardsActivity"
+                  android:label="@string/saved_cards"
+                  android:parentActivityName=".MyCardActivity"/>
+
         <activity android:name=".FindCardsActivity"
                   android:label="@string/find_cards"
                   android:parentActivityName=".MyCardActivity"/>
 
-        <activity android:name=".SavedCardsActivity"
-                  android:label="@string/saved_cards"
-                  android:parentActivityName=".MyCardActivity"/>
+        <activity android:name=".SavedCardActivity" />
+
     </application>
 
 </manifest>
