--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,10 @@
                   android:label="View Card"
                   android:parentActivityName=".activities.MainActivity"/>
 
+        <activity android:name=".activities.RequestsActivity"
+                  android:label="Pending Requests"
+                  android:parentActivityName=".activities.MainActivity"/>
+
          <activity android:name="com.facebook.LoginActivity"
                    android:theme="@android:style/Theme.Translucent.NoTitleBar"
                    android:label="@string/app_name" />
