--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,8 +42,7 @@
 
         <activity android:name=".activities.FacebookSignupActivity"
                   android:label="@string/quick_setup"
-                  android:windowSoftInputMode="adjustPan"
-                  android:parentActivityName=".activities.UserLoginActivity"/>
+                  android:windowSoftInputMode="adjustPan"/>
 
         <activity android:name=".activities.CardActivity"
                   android:label="View Card"
@@ -54,8 +53,8 @@
                   android:parentActivityName=".activities.MainActivity"/>
 
          <activity android:name="com.facebook.LoginActivity"
-                   android:theme="@android:style/Theme.Translucent.NoTitleBar"
-                   android:label="@string/app_name" />
+                   android:theme="@android:style/Theme.Holo.Light.DarkActionBar"
+                   android:label="Facebook Signup" />
 
     </application>
 
